kubernetes/api/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: api
  namespace: live
  labels:
    conference: azdus
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: api
              servicePort: 8080
